# libaloo

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Readme.md  build.sh  index.html  install.sh  release.sh  setup.py  uninstall.sh
.github/workflows/: cmake-single-platform.yml  release.yml
aloo-edit/: CMakeLists.txt  aloo.config.yaml  aloo.json  builder.ui  style.css
aloo-edit/app/: main.c
aloo-edit/styles/: colors.css  material.bundle.min.css  material.css
aloo-edit/test/: CMakeLists.txt  main.c
aloo-project/: CMakeLists.txt  aloo.json
aloo-project/app/: main.c
aloo-project/models/: human.h
aloo-project/server/: Human.c  Human.h  human.c  human.h
aloo-project/test/: CMakeLists.txt  main.c
api/: app.md  box.md  button.md  grid.md  index.md  label.md  macros.md  style.md  types.md  widget-template.md  widget.md
api/common/: app.md  box.md  grid.md  label.md  style.md
api/test/: index.md
api/utils/: error.md  logger.md
cli/: CMakeLists.txt  aloo  aloo-cli.cpp  aloo-cli.sample.cpp  aloo.cpp  aloo.js  aloo.sample.cpp  aloo.schema.json  aloo.ts  build.sh  connect-db.cpp  create-app.cpp  md-glow.ts  model.cpp  model.py  run.sh  utils.cpp
cli/sample/: CMakeLists.txt  main.c  main.server.c  main.server.h  test.c
docs/: cli.md  index.md
docs/api/: index.md
docs/api/common/: app.md  box.md  builder.md  button.md  window.md
docs/api/db/: sqlite.md
gtest/: CMakeLists.txt
include/: aloo.h
include/common/: app.h  box.h  builder.h  button.h  grid.h  input.h  label.h  macros.h  style.h  types.h  widget.h  window.h
include/test/: aloo.h
include/utils/: logger.h
scripts/: aloo.config.yaml  init.lua  requirements.txt  rockspec
scripts/src/: CMakeLists.txt  __init__.py  aloocli.py  main.c  test.c
scripts/src/styles/: color.css  colors.css  dark.css  light.css
src/common/: app.c  box.c  builder.c  button.c  grid.c  input.c  label.c  style.c  widget.c  window.c
src/db/: sqlite.c
src/test/: aloo.c
src/utils/: error.c  logger.c
styles/: material.css
test/: int.spec.c  main.c  widget.spec.c
